Homework checking part done
